<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:text="@string/name"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/name_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="22sp"
        android:layout_toEndOf="@+id/name_label"/>

    <TextView
        android:id="@+id/address_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_below="@+id/name_label"
        android:layout_marginTop="@dimen/activity_vertical_margin" />

    <TextView
        android:id="@+id/address_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textSize="20sp"
        android:layout_toEndOf="@+id/address_label"
        android:layout_alignBottom="@+id/address_label"/>

    <TextView
        android:id="@+id/address2_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textSize="20sp"
        android:layout_toEndOf="@+id/address_label"
        android:layout_below="@+id/address_content"/>

    <TextView
        android:id="@+id/city_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_below="@+id/address2_content"
        android:layout_marginTop="@dimen/activity_vertical_margin" />

    <TextView
        android:id="@+id/city_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city"
        android:textSize="20sp"
        android:layout_toEndOf="@+id/city_label"
        android:layout_alignBottom="@+id/city_label"/>

    <TextView
        android:id="@+id/zip_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zip"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_below="@+id/city_label"
        android:layout_marginTop="@dimen/activity_vertical_margin" />

    <TextView
        android:id="@+id/zip_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zip"
        android:textSize="20sp"
        android:layout_toEndOf="@+id/zip_label"
        android:layout_alignBottom="@+id/zip_label"/>

</RelativeLayout>