<LinearLayout android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    android:paddingTop="12dp"
    android:background="@color/white"

    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/title_room_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/room_create_title"
        android:textStyle="bold"
        android:paddingBottom="24sp"
        android:textSize="24sp"
        android:layout_marginTop="@dimen/activity_vertical_margin" />

    <Spinner
        android:id="@+id/room_type_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:prompt="@string/choose_roomType"
        android:textSize="20sp" />


    <!-- Zip Label -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:textSize="20sp" >

        <EditText android:id="@+id/input_surface"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/surface"
            android:textSize="20sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_send"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:padding="12dp"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/white"
        android:text="Valider"
        android:textSize="20sp"
        />

</LinearLayout>